--- a/package.json
+++ b/package.json
@@ -10,15 +10,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.8.3",
+    "@tensorflow/tfjs-converter": "^4.22.0",
+    "antd": "^4.24.16",
+    "autoprefixer": "^10.4.17",
+    "framer-motion": "^11.18.2",
+    "postcss": "^8.4.35",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "antd": "^4.24.14",
-    "@ant-design/icons": "^4.8.0",
-    "framer-motion": "^11.0.8",
     "react-webcam": "^7.2.0",
-    "tailwindcss": "^3.4.1",
-    "postcss": "^8.4.35",
-    "autoprefixer": "^10.4.17"
+    "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
